--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 html, body {
     background-color: #0d001b;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='200' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23434403' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%23555555'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");    color: rgb(224, 224, 0);
-    font-family: 'Roboto', monospace; 
-    margin: 0;
-    overflow-x: hidden;
+    font-family: 'Roboto', sans-serif; /*font-family: 'Oswald', sans-serif;*/
+    margin: 0;                         /*font-family: 'Roboto', sans-serif;*/                          
+    overflow-x: hidden;                /*font-family: 'Roboto Mono', monospace;*/
    }
 
 main {
@@ -20,21 +20,20 @@ main {
     bottom: 75px;
     border-radius: 5px;
 
-
 }
 
 .greeting {
-    width: 30vw;
+    width: 425px;
     padding: 1rem 1rem 3rem 4rem;
-    margin: -3rem 0 0 10rem;
-    background-color: rgba(255, 255, 255, 0.076); 
+    margin: -3rem 0 8vh 10rem;
+    background-color: rgba(255, 255, 255, 0.032); 
     border-radius: 10px; 
     box-shadow: 0 0 5px rgba(255, 255, 255, 0.209);
 
 }
 
-.greeting:hover, .skillSection:hover, .contactSection:hover {
-    background-color: rgba(255, 255, 255, 0.031); 
+.greeting:hover, .skillSection:hover, .contactSection:hover, .projSection:hover {
+    background-color: rgba(255, 255, 255, 0.075); 
 
 }
 
@@ -47,7 +46,7 @@ h1 {
     color: white;
 }
 
-.intro {
+.intro, section {
     line-height: 2rem;
 }
 
@@ -57,14 +56,10 @@ a {
     font-family: 'Roboto Mono', monospace;
 }
 
-.github:a {
-    color: white;
-}
-
 
 .pb {
     max-width: 15rem;
-    margin: -24rem 0 5rem 45rem;
+    margin: -40rem 0 4rem 45rem;
     border-radius: 1rem 10rem 1rem 1rem;
     
 
@@ -87,11 +82,12 @@ a {
     flex-grow: 1;
     margin-left: 11rem;
     gap: 2.5rem;
+
 }
 
-.linksContainer a:hover {
+.linksContainer a:hover, .github:hover {
         color: white;
-
+        
   }
   
 .logo {
@@ -99,7 +95,10 @@ a {
     left: 7rem;
     font-family: 'Oswald', sans-serif;
     font-size: 22px;
+  }
 
+  button {
+    font-weight: 400;
   }
 
   button:hover {
@@ -114,7 +113,7 @@ a {
     width: 10rem;
     border: none;
     border-radius: 20px;
-    background-image: linear-gradient(to left, hsl(61, 100%, 60%), hsl(289, 98%, 38%));
+    background-image: linear-gradient(to left, hsl(61, 100%, 60%), hsl(313, 100%, 50%));
     font-size: 1rem;
     cursor: pointer;
     position: relative;
@@ -127,7 +126,7 @@ a {
     width: 10rem;
     border: none;
     border-radius: 20px;
-    background-image: linear-gradient(to left, hsl(61, 100%, 60%), hsl(289, 98%, 38%));
+    background-image: linear-gradient(to left, hsl(61, 100%, 60%), hsl(313, 100%, 50%));
     font-size: 1rem;
     cursor: pointer;
     margin-top: 2rem;
@@ -141,19 +140,10 @@ a {
     align-items: center;
   }
 
-.skillSection {
-    background-color: rgba(25, 25, 25, 0.704);
-    height: 60vh;
-    display: flex;
-    gap: 5vw;
-    margin-bottom: 2rem;
-    border-radius: 10px; 
-    box-shadow: 0 0 5px rgba(255, 255, 255, 0.209);
-}
+
 
 .contactSection {
-    background-color: rgba(25, 25, 25, 0.704);
-    width: 80vw;
+    background-color: rgba(25, 25, 25, 0.144);
     height: 60vh;
     gap: 20vw;
     margin-bottom: 2rem;
@@ -172,14 +162,26 @@ a {
     filter: blur(100%);
 }
 
+.skillSection {
+    background-color: rgba(25, 25, 25, 0.144);
+    height: 60vh;
+    display: flex;
+    margin-bottom: 2rem;
+    border-radius: 10px; 
+    box-shadow: 0 0 5px rgba(255, 255, 255, 0.209);
+    gap: 5rem;
+}
+
+
 .langBox {
     width: 200px;
-    height: 60vh;
-    border: 2px solid white;
+    height: 100%;
     border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    left: 15vw;
 }
 
 .langLogo {
@@ -196,6 +198,12 @@ a {
     border-radius: 50%;
 }
 
+.langLabel {
+    position: absolute;
+    margin-top: 50vh;
+    font-weight: 700;
+}
+
 
 footer {
     width: 100%;
@@ -208,6 +216,117 @@ footer {
     
 }
 
+.skillHeader {
+    position: absolute;
+    left: 12rem;
+    bottom: -48rem;
+    font-size: 22em;
+    font-weight: 700;
+    opacity: 5%;
+    font-family: 'Roboto', monospace; 
+}
 
-  
+.learning {
+    position: absolute;
+    left: 220px;
+}
+
+.expBar {
+    width: 200px;
+    height: 10px;
+    background-color: rgba(78, 78, 78, 0.557);
+    position: absolute;
+    margin-top: 40vh;
+    border-radius: 10px;
+    padding: 2px;
+    
+}
+
+.exp1 {
+    width: 120px;
+    height: 10px;
+    border-radius: 10px;
+    background-image: linear-gradient(to right, hsl(61, 100%, 60%), hsl(313, 100%, 50%));
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+
+.exp2 {
+    width: 80px;
+    height: 10px;
+    border-radius: 10px;
+    background-image: linear-gradient(to right, hsl(61, 100%, 60%), hsl(313, 100%, 50%));
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+
+.exp3 {
+    width: 40px;
+    height: 10px;
+    border-radius: 10px;
+    background-image: linear-gradient(to right, hsl(61, 100%, 60%), hsl(313, 100%, 50%));
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+
+.github {
+    color: rgb(191, 191, 191);
+}
+
+.barCircle {
+    width: 13px;
+    height: 13px;
+    border-radius: 50%;
+    background-color: white;
+    
+    
+}
+
+.splitter {
+    scale: 60%;
+    border-radius: 10px;
+}
+
+.splitterApp {
+    color: white;
+    font-family: 'Roboto', sans-serif;                        
+}
+
+.tryMeBtn {
+    color: rgb(255, 255, 255);
+    min-height: 2.5em;
+    width: 10rem;
+    border: none;
+    border-radius: 20px;
+    background-image: linear-gradient(to left, hsl(61, 100%, 60%), hsl(313, 100%, 50%));
+    font-size: 1rem;
+    cursor: pointer;
+    position: relative;
+    left: 4rem;
+ }
+
+.projHeader {
+    width: 100%;
+    margin-left: 4rem;
+    
+}
+
+.projSection {
+    background-color: rgba(25, 25, 25, 0.144);
+    height: 60vh;
+    display: flex;
+    margin-bottom: 2rem;
+    border-radius: 10px; 
+    box-shadow: 0 0 5px rgba(255, 255, 255, 0.209);
+    gap: 5rem;
+}
+
+section {
+    color:hsl(0, 0%, 58%);
+    margin:0 0 2rem 4rem;
+
+}
 
