--- a/style.css
+++ b/style.css
@@ -7,17 +7,18 @@ html, body {
    }
 
 main {
+    width: 100%;
     height: 100%;
-    margin: 15rem 0 0 10rem;
+    margin: 15vh 0 0 10vw;
 }
 
 .yellowBar {
-    width: 35vw;
+    width: 500px;
     height: 6px;
     background-image: linear-gradient(to right, hsl(61, 100%, 60%), hsl(0, 0%, 100%));
     position: relative;
     left: 165px;
-    bottom: 75px;
+    top: 35px;
     border-radius: 5px;
 
 }
@@ -25,7 +26,7 @@ main {
 .greeting {
     width: 425px;
     padding: 1rem 1rem 3rem 4rem;
-    margin: -3rem 0 8vh 10rem;
+    margin: 4rem 0 3.2rem 10rem;
     background-color: rgba(255, 255, 255, 0.032); 
     border-radius: 10px; 
     box-shadow: 0 0 5px rgba(255, 255, 255, 0.209);
@@ -34,6 +35,14 @@ main {
 
 .greeting:hover, .skillSection:hover, .contactSection:hover, .projSection:hover {
     background-color: rgba(255, 255, 255, 0.075); 
+
+}
+
+.pb {
+    max-width: 15rem;
+    margin: -40rem 0 4rem 45rem;
+    border-radius: 1rem 10rem 1rem 1rem;
+    
 
 }
 
@@ -55,15 +64,6 @@ a {
     text-decoration:none;
     color: rgb(224, 224, 0);
     font-family: 'Roboto Mono', monospace;
-}
-
-
-.pb {
-    max-width: 15rem;
-    margin: -40rem 0 4rem 45rem;
-    border-radius: 1rem 10rem 1rem 1rem;
-    
-
 }
 
 .navContainer {
@@ -141,22 +141,6 @@ a {
     align-items: center;
   }
 
-
-
-  .contactSection {
-    background-color: rgba(25, 25, 25, 0.144);
-    height: 50vh;
-    gap: 20vw;
-    margin-bottom: 2rem;
-    border-radius: 10px; 
-    box-shadow: 0 0 5px rgba(255, 255, 255, 0.209);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    pos
-}
-
-
 .skillSection { 
     
     background-color: rgba(25, 25, 25, 0.144);
@@ -168,8 +152,6 @@ a {
     gap: 5rem;
 }
    
-
-
 
 .langBox {
     width: 200px;
@@ -222,7 +204,6 @@ footer {
     font-weight: 700;
     opacity: 5%;
     font-family: 'Roboto', monospace; 
-    display: none;
 }
 
 
@@ -332,6 +313,19 @@ section {
 }
 
 
+.contactSection {
+    background-color: rgba(25, 25, 25, 0.144);
+    height: 50vh;
+    gap: 20vw;
+    margin-bottom: 2rem;
+    border-radius: 10px; 
+    box-shadow: 0 0 5px rgba(255, 255, 255, 0.209);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
 .card {
     width: 400px;
     height: 100px;
@@ -382,6 +376,7 @@ section {
 
 .gitTitel {
     position: relative;
-    right: 50vw;
+    right: 49.5vw;
     bottom: 16vh;
 }
+
