--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ a {
     background-color: rgba(25, 25, 25, 0.144);
     height: 30rem;
     display: flex;
-    margin-bottom: 2rem;
+    margin: 5rem 0 2rem 0;
     border-radius: 10px; 
     box-shadow: 0 0 5px rgba(255, 255, 255, 0.209);
     gap: 5rem;
@@ -173,14 +173,13 @@ a {
 .langCircle {
     width: 150px;
     height: 150px;
-    margin: 0rem 0 0 0rem;
     border: 2px solid rgb(224, 224, 0);
     border-radius: 50%;
 }
 
 .langLabel {
     position: absolute;
-    margin-top: 50vh;
+    margin-top: 175%;
     font-weight: 700;
 }
 
@@ -217,14 +216,14 @@ footer {
     height: 10px;
     background-color: rgba(78, 78, 78, 0.557);
     position: absolute;
-    margin-top: 40vh;
+    margin-top: 125%;
     border-radius: 10px;
     padding: 2px;
     
 }
 
 .exp1 {
-    width: 120px;
+    width: 180px;
     height: 10px;
     border-radius: 10px;
     background-image: linear-gradient(to right, hsl(61, 100%, 60%), hsl(313, 100%, 50%));
@@ -234,7 +233,7 @@ footer {
 }
 
 .exp2 {
-    width: 80px;
+    width: 110px;
     height: 10px;
     border-radius: 10px;
     background-image: linear-gradient(to right, hsl(61, 100%, 60%), hsl(313, 100%, 50%));
