--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ main {
 }
 
 section {
-    width: 100%;
+    width: 30vw;
 }
 
 .yellowBar {
@@ -179,11 +179,13 @@ a {
     height: 150px;
     border: 2px solid rgb(224, 224, 0);
     border-radius: 50%;
+    margin: 10vh 0 0 0;
+    
 }
 
 .langLabel {
     position: absolute;
-    margin-top: 175%;
+    margin-top: 55vh;
     font-weight: 700;
 }
 
@@ -219,7 +221,7 @@ footer {
     height: 10px;
     background-color: rgba(78, 78, 78, 0.557);
     position: absolute;
-    margin-top: 125%;
+    margin-top: 45vh;
     border-radius: 10px;
     padding: 2px;
     
