--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html, body {
-    background-color: #0d001b;
+    background-color: #12001b;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='200' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23434403' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%23555555'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");    color: rgb(224, 224, 0);
     font-family: 'Roboto', sans-serif; /*font-family: 'Oswald', sans-serif;*/
     margin: 0;                         /*font-family: 'Roboto', sans-serif;*/                          
@@ -151,7 +151,6 @@ a {
     margin: 5rem 0 2rem 0;
     border-radius: 10px; 
     box-shadow: 0 0 5px rgba(255, 255, 255, 0.209);
-    gap: 5rem;
 }
    
 
@@ -163,7 +162,8 @@ a {
     justify-content: center;
     align-items: center;
     position: relative;
-    right: 35%;
+
+    margin-left: -550px;
 }
 
 .langLogo {
@@ -177,13 +177,13 @@ a {
     height: 150px;
     border: 2px solid rgb(224, 224, 0);
     border-radius: 50%;
-    margin: 10vh 0 0 0;
+    margin: 5vh 0 0 0;
     
 }
 
 .langLabel {
     position: absolute;
-    margin-top: 55vh;
+    margin-top: 48vh;
     font-weight: 700;
 }
 
@@ -196,7 +196,6 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    
 }
 
 .backFont {
@@ -219,7 +218,7 @@ footer {
     height: 10px;
     background-color: rgba(78, 78, 78, 0.557);
     position: absolute;
-    margin-top: 45vh;
+    margin-top: 38vh;
     border-radius: 10px;
     padding: 2px;
     
@@ -388,7 +387,9 @@ section {
 
 @media only screen and (max-width: 767px) {
 
-    body {
+
+    h1 {
+        font-size: 2rem;
     }
 
 
@@ -464,6 +465,64 @@ section {
     margin-left: -2vw;
     
  }
+
+ footer {
+        width: 100%;
+        height: 20vh;
+        background-color: black;
+        color: rgba(255, 255, 255, 0.477); 
+        display: flex;
+        justify-content: center;
+        align-items: center;
+}
+
+.footerText {
+    width: 80%;
+    text-align: center;
+}
+
+.skillSection { 
+    background-color: rgba(25, 25, 25, 0.144);
+    width: 80%;
+    height: 100%;
+    display: block;    
+    margin: 5rem 0 2rem 0;
+    border-radius: 10px; 
+    box-shadow: 0 0 5px rgba(255, 255, 255, 0.209);
+    
+    
+}
+
+.projSection, .contactSection {
+    width: 80%;
+
+}
+
+.skillHeader {
+    width: 100%;
+    margin-left: 10vw;
+    padding: 1.75rem 1rem 0 0;
+    
+}
+
+
+.projHeader {
+    max-width: 450px;
+    margin-left: 10vw;
+    
+}
+
+.langBox {
+    width: 200px;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0rem auto 7rem auto;
+    
+
+}
+
 
 
 
