--- a/style.css
+++ b/style.css
@@ -22,14 +22,12 @@ main {
 }
 
 section {
+    width: 100%;
     color:hsl(0, 0%, 58%);
     margin: 2rem 0 2rem 4rem;
-    width: 100%;
 
 }
 
-.leftSide {
-}
 
 .yellowBar {
     width: 495px;
@@ -444,11 +442,7 @@ footer {
 
 .pb{
 
-    width: 25vw;
-    margin: 0 0 3.5rem 3.5rem;
-    border-radius: 1rem 10rem 1rem 1rem;
-    position: absolute;
-    bottom: -118rem;
+   display: none;
 }
 
 .yellowBar {
@@ -499,15 +493,16 @@ footer {
     
 }
 
-.projSection, .contactSection {
+.contactSection {
     width: 80%;
+    height: 22rem;
 
 }
 
 .projSection {
     background-color: rgba(25, 25, 25, 0.144);
-    height: 30rem;
-    display: block;
+    width: 80%;
+    height: 45rem;
     margin-bottom: 2rem;
     border-radius: 10px; 
     box-shadow: 0 0 5px rgba(255, 255, 255, 0.209);
@@ -524,8 +519,7 @@ footer {
 
 .projHeader {
     width: 200px;
-    padding: 1rem 1rem 0 4rem;
-    margin: 0 0 0 -2rem;
+    margin: 2rem 0 0 0.2rem;
 }
 
 .langBox {
@@ -539,25 +533,71 @@ footer {
 }
 
 section {
-    width: 60%;
+    width: 100%;
     color:hsl(0, 0%, 58%);
-    margin: 15rem 0 2rem 7vw;
+    margin: 15rem 0 2rem 0vw;
+    padding: rem;
 
 }
 
 
 .splitter {
-    max-width: 100%;
     border-radius: 10px;
-    margin: 0rem 0 0 0rem;
+    position: relative;
+    left: 0%;
+    bottom: 33rem;
+    margin: 0 auto;
+ 
     
 }
 
 
+.leftSide {
+    width: 80%;
+    margin: 0 auto;
+}
 
 
+.contactRightside {
+    width: 280px;
+    height: 100%;
+    margin-left: -15rem;
+    
+}
 
+.card {
+    width: 200px;
+    height: 100px;
+    padding: 20px;
+    background-color: rgba(181, 181, 181, 0.092);
+    border-radius: 10px;
+    margin-bottom: -2rem;
+    margin-left: -1.2rem;
+}
 
+.contactSection {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.tryMeBtn {
+    color: rgb(255, 255, 255);
+    min-height: 2.5em;
+    width: 10rem;
+    border: none;
+    border-radius: 20px;
+    background-image: linear-gradient(to left, hsl(61, 100%, 60%), hsl(313, 100%, 50%));
+    font-size: 1rem;
+    cursor: pointer;
+    position: relative;
+    left: 20%;
+ }
+
+.social {
+    width: 15rem;
+}
 
     
 }
