--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html, body {
-    background-color: #12001b;
+    background-color: #130011;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='200' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23434403' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%23555555'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");    color: rgb(224, 224, 0);
     font-family: 'Roboto', sans-serif; /*font-family: 'Oswald', sans-serif;*/
     margin: 0;                         /*font-family: 'Roboto', sans-serif;*/                          
@@ -366,7 +366,15 @@ footer {
     height: 100px;
 }
 
+
 .iconLink {
+    width: 1.5rem;
+    height: 1.5rem;
+    filter: invert(100%);
+    margin: 0 0.5rem -0.3rem 0;
+}
+
+.iconLink2 {
     width: 1.5rem;
     height: 1.5rem;
     filter: invert(100%);
@@ -379,6 +387,8 @@ footer {
 
 .social {
     margin-top: 3rem;
+    display: flex;
+    gap: 2rem;
 }
 
 .gitHeader {
@@ -499,7 +509,7 @@ footer {
 .projSection {
     background-color: rgba(25, 25, 25, 0.144);
     width: 80%;
-    height: 45rem;
+    height: 100vh;
     margin-bottom: 2rem;
     border-radius: 10px; 
     box-shadow: 0 0 5px rgba(255, 255, 255, 0.209);
@@ -507,7 +517,7 @@ footer {
 }
 
 .skillHeader {
-    width: 100%;
+    width: 80%;
     margin-left: 10vw;
     padding: 1.75rem 1rem 0 0;
     
@@ -583,7 +593,12 @@ section {
 
 .social {
     width: 15rem;
+    display: block;
+    
+}
 
+.iconLineHeight {
+    margin-bottom: 1.25rem;
 }
 
 /* Stile für das Dropdown-Menü */
@@ -601,7 +616,7 @@ section {
     border-radius: 5px;
     cursor: pointer;
     position: absolute;
-    left: 20vw;
+    left: 25vw;
     margin-top: -1rem;
   
   }
@@ -609,12 +624,12 @@ section {
   .dropdown-content {
     display: none;
     position: absolute;
-    left: 20vw;
+    left: 60px;
     margin-top: 1.3rem;
     background-color: #f9f9f9;
     min-width: 25vw;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    border-radius: 0 20px 20px 20px;
+    border-radius: 20px 0px 20px 20px;
     z-index: 1;
   }
   
@@ -623,18 +638,26 @@ section {
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    
   }
   
   .dropdown-content a:hover {
     background-color: #f1f1f1;
-    padding-left: 20px;
-    border-radius: 0 20px 20px 20px;
+    padding-left: 15px;
+    border-radius: 20px 0px 20px 20px;
 
   }
   
   .show {
     display: block;
   }
+
+  .iconLink2 {
+    width: 1.5rem;
+    height: 1.5rem;
+    filter: invert(100%);
+    margin: 0 0.5rem -0.3rem 0;
+}
   
     
 }
