--- a/style.css
+++ b/style.css
@@ -1,5 +1,23 @@
+:root {
+    --main-color: #0c0013;
+    --sec-color:  rgb(224, 224, 0);
+    --gradient: linear-gradient(to left, var(--sec-color), hsl(313, 100%, 50%));
+ 
+  }
+  
+.invBtn, .portfolioBtn, .tryMeBtn, .dropBtn {
+    background: var(--gradient);
+    color: white;
+}
+
+.greeting:hover, .skillSection:hover, .contactSection:hover, .projSection:hover {
+    background-color: rgba(255, 255, 255, 0.075); 
+
+}
+
+
 html, body {
-    background-color: #130011;
+    background-color: var(--main-color);
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='200' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23434403' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%23555555'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");    color: rgb(224, 224, 0);
     font-family: 'Roboto', sans-serif; /*font-family: 'Oswald', sans-serif;*/
     margin: 0;                         /*font-family: 'Roboto', sans-serif;*/                          
@@ -15,6 +33,21 @@ main {
 .intro, section, footer {
     font-size: 1em;
     line-height: 2rem;
+}
+
+.colorBtn {
+    background-color: #ebebeb48; /* ! */
+    color: white;
+    border-radius: 20px;
+    padding: 5px 5px;
+    position: fixed;
+    left: 93vw;
+    bottom: 3rem;
+    cursor: pointer;
+    border: none;
+    font-weight: 700;
+    font-size: 28px;
+    
 }
 
 .dropdown {
@@ -35,7 +68,7 @@ section {
 .yellowBar {
     width: 495px;
     height: 6px;
-    background-image: linear-gradient(to right, hsl(61, 100%, 60%), hsl(0, 0%, 100%));
+    background-image: linear-gradient(to right, var(--sec-color) , hsl(0, 0%, 100%));
     position: relative;
     left: 165px;
     top: 35px;
@@ -49,11 +82,6 @@ section {
     background-color: rgba(255, 255, 255, 0.032); 
     border-radius: 10px; 
     box-shadow: 0 0 5px rgba(255, 255, 255, 0.209);
-
-}
-
-.greeting:hover, .skillSection:hover, .contactSection:hover, .projSection:hover {
-    background-color: rgba(255, 255, 255, 0.075); 
 
 }
 
@@ -76,7 +104,7 @@ h1 {
 
 a {
     text-decoration:none;
-    color: rgb(224, 224, 0);
+    color: var(--sec-color);
     font-family: 'Roboto Mono', monospace;
 }
 
@@ -102,7 +130,7 @@ a {
 
 .linksContainer a:hover, .github:hover {
         color: white;
-        
+       
   }
   
 .logo {
@@ -118,17 +146,16 @@ a {
 
   button:hover {
       background-image: linear-gradient(to left, rgb(255, 255, 255), hsl(313, 100%, 50%));
-      transition: background-image 1s ease-in;
+      transition-duration: 1s;
+
     }
 
   
   .invBtn {
-    color: rgb(255, 255, 255);
     min-height: 2.5em;
     width: 10rem;
     border: none;
     border-radius: 20px;
-    background-image: linear-gradient(to left, hsl(61, 100%, 60%), hsl(313, 100%, 50%));
     font-size: 1rem;
     cursor: pointer;
     position: relative;
@@ -136,12 +163,10 @@ a {
  }
 
  .portfolioBtn {
-    color: white;
     min-height: 2.5em;
     width: 10rem;
     border: none;
     border-radius: 20px;
-    background-image: linear-gradient(to left, hsl(61, 100%, 60%), hsl(313, 100%, 50%));
     font-size: 1rem;
     cursor: pointer;
     margin-top: 2rem;
@@ -186,7 +211,7 @@ a {
 .langCircle {
     width: 150px;
     height: 150px;
-    border: 2px solid rgb(224, 224, 0);
+    border: 2px solid var(--sec-color);
     border-radius: 50%;
     margin: 5vh 0 0 0;
     
@@ -239,7 +264,7 @@ footer {
     width: 180px;
     height: 10px;
     border-radius: 10px;
-    background-image: linear-gradient(to right, hsl(61, 100%, 60%), hsl(313, 100%, 50%));
+    background-image: linear-gradient(to right, var(--sec-color), hsl(313, 100%, 50%));
     display: flex;
     justify-content: end;
     align-items: center;
@@ -249,7 +274,7 @@ footer {
     width: 110px;
     height: 10px;
     border-radius: 10px;
-    background-image: linear-gradient(to right, hsl(61, 100%, 60%), hsl(313, 100%, 50%));
+    background-image: linear-gradient(to right, var(--sec-color), hsl(313, 100%, 50%));
     display: flex;
     justify-content: end;
     align-items: center;
@@ -259,7 +284,7 @@ footer {
     width: 40px;
     height: 10px;
     border-radius: 10px;
-    background-image: linear-gradient(to right, hsl(61, 100%, 60%), hsl(313, 100%, 50%));
+    background-image: linear-gradient(to right, var(--sec-color), hsl(313, 100%, 50%));
     display: flex;
     justify-content: end;
     align-items: center;
@@ -292,12 +317,10 @@ footer {
 }
 
 .tryMeBtn {
-    color: rgb(255, 255, 255);
     min-height: 2.5em;
     width: 10rem;
     border: none;
     border-radius: 20px;
-    background-image: linear-gradient(to left, hsl(61, 100%, 60%), hsl(313, 100%, 50%));
     font-size: 1rem;
     cursor: pointer;
     position: relative;
@@ -411,22 +434,10 @@ footer {
     }
 
     .logo {
-    position: absolute;
     left: 2rem;
-    font-family: 'Oswald', sans-serif;
     font-size: 1.15em;
   }
 
-  .navContainer {
-    background-color: rgba(25, 25, 25, 0.701);
-    min-height: 5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    z-index: 100;
-}
- 
 .linksContainer {
     display: flex;
     justify-content: center;
@@ -461,12 +472,10 @@ footer {
 }
 
 .portfolioBtn {
-    color: white;
     min-height: 2.5em;
     width: 10rem;
     border: none;
     border-radius: 20px;
-    background-image: linear-gradient(to left, hsl(61, 100%, 60%), hsl(313, 100%, 50%));
     font-size: 1rem;
     cursor: pointer;
     margin-top: 2rem;
@@ -607,9 +616,7 @@ section {
     display: inline-block;
   }
   
-  .dropbtn {
-    background-image: linear-gradient(to left, hsl(61, 100%, 60%), hsl(313, 100%, 50%));
-    color: #ffffff;
+  .dropBtn {
     padding: 10px;
     font-size: 16px;
     border: none;
@@ -637,6 +644,7 @@ section {
     color: #333333;
     padding: 12px 16px;
     text-decoration: none;
+    border-radius: 20px 0px 20px 20px;
     display: block;
     
   }
@@ -644,7 +652,6 @@ section {
   .dropdown-content a:hover {
     background-color: #f1f1f1;
     padding-left: 15px;
-    border-radius: 20px 0px 20px 20px;
 
   }
   
@@ -658,6 +665,8 @@ section {
     filter: invert(100%);
     margin: 0 0.5rem -0.3rem 0;
 }
+
+
   
     
 }
