--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 :root {
     --main-color: #0c0013;
-    --sec-color:  rgb(224, 224, 0);
-    --gradient: linear-gradient(to left, var(--sec-color), hsl(313, 100%, 50%));
+    --accent-color:  rgb(224, 224, 0);
+    --gradient: linear-gradient(to left, var(--accent-color), hsl(313, 100%, 50%));
+
+    --link-color: rgb(224, 224, 0);
  
   }
   
@@ -68,7 +70,7 @@ section {
 .yellowBar {
     width: 495px;
     height: 6px;
-    background-image: linear-gradient(to right, var(--sec-color) , hsl(0, 0%, 100%));
+    background-image: linear-gradient(to right, var(--accent-color) , hsl(0, 0%, 100%));
     position: relative;
     left: 165px;
     top: 35px;
@@ -104,7 +106,7 @@ h1 {
 
 a {
     text-decoration:none;
-    color: var(--sec-color);
+    color: var(--accent-color);
     font-family: 'Roboto Mono', monospace;
 }
 
@@ -211,7 +213,7 @@ a {
 .langCircle {
     width: 150px;
     height: 150px;
-    border: 2px solid var(--sec-color);
+    border: 2px solid var(--accent-color);
     border-radius: 50%;
     margin: 5vh 0 0 0;
     
@@ -264,7 +266,7 @@ footer {
     width: 180px;
     height: 10px;
     border-radius: 10px;
-    background-image: linear-gradient(to right, var(--sec-color), hsl(313, 100%, 50%));
+    background-image: linear-gradient(to right, var(--accent-color), hsl(313, 100%, 50%));
     display: flex;
     justify-content: end;
     align-items: center;
@@ -274,7 +276,7 @@ footer {
     width: 110px;
     height: 10px;
     border-radius: 10px;
-    background-image: linear-gradient(to right, var(--sec-color), hsl(313, 100%, 50%));
+    background-image: linear-gradient(to right, var(--accent-color), hsl(313, 100%, 50%));
     display: flex;
     justify-content: end;
     align-items: center;
@@ -284,7 +286,7 @@ footer {
     width: 40px;
     height: 10px;
     border-radius: 10px;
-    background-image: linear-gradient(to right, var(--sec-color), hsl(313, 100%, 50%));
+    background-image: linear-gradient(to right, var(--accent-color), hsl(313, 100%, 50%));
     display: flex;
     justify-content: end;
     align-items: center;
@@ -664,9 +666,7 @@ section {
     margin: 0 0.5rem -0.3rem 0;
 }
 
-
   
-    
 }
 
 
