--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     --link-color: rgb(224, 224, 0);
  
   }
+
   
 .invBtn, .portfolioBtn, .tryMeBtn {
     background: var(--gradient);
@@ -32,13 +33,17 @@ main {
     margin: 15vh 0 0 10vw;
 }
 
+p {
+    color: var(--link-color); 
+}
+
 .intro, section, footer {
     font-size: 1em;
     line-height: 2rem;
 }
 
 .colorBtn {
-    background-color: #ebebeb48; /* ! */
+    background-color: #746363c0; /* ! */
     color: white;
     border-radius: 20px;
     padding: 5px 5px;
@@ -49,7 +54,6 @@ main {
     border: none;
     font-weight: 700;
     font-size: 28px;
-    
 }
 
 .dropdown {
@@ -70,7 +74,7 @@ section {
 .yellowBar {
     width: 495px;
     height: 6px;
-    background-image: linear-gradient(to right, var(--accent-color) , hsl(0, 0%, 100%));
+    background-image: linear-gradient(to right, var(--link-color) , hsl(0, 0%, 100%));
     position: relative;
     left: 165px;
     top: 35px;
@@ -97,7 +101,7 @@ section {
 h1 {
     font-family: 'Roboto Mono', monospace; 
     font-size: 50px;
-  
+    color: var(--link-color);
 }
 
 .highlight {
@@ -106,7 +110,7 @@ h1 {
 
 a {
     text-decoration:none;
-    color: var(--accent-color);
+    color: var(--link-color);
     font-family: 'Roboto Mono', monospace;
 }
 
@@ -119,6 +123,7 @@ a {
     position: relative;
     z-index: 100;
 }
+
   
   .linksContainer {
     display: flex;
@@ -127,7 +132,6 @@ a {
     flex-grow: 1;
     margin-left: 11rem;
     gap: 2.5rem;
-
 }
 
 .linksContainer a:hover, .github:hover {
@@ -135,20 +139,22 @@ a {
        
   }
   
-.logo {
+#logo {
     position: absolute;
     left: 7rem;
     font-family: 'Oswald', sans-serif;
     font-size: 1.375em;
+    color: rgb(224, 224, 0);
+
   }
 
   button {
     font-weight: 400;
+    transition: background-image 3s ease-in;
   }
 
   button:hover {
       background-image: linear-gradient(to left, rgb(255, 255, 255), hsl(313, 100%, 50%));
-      transition-duration: 1s;
 
     }
 
@@ -213,7 +219,7 @@ a {
 .langCircle {
     width: 150px;
     height: 150px;
-    border: 2px solid var(--accent-color);
+    border: 2px solid var(--link-color);
     border-radius: 50%;
     margin: 5vh 0 0 0;
     
@@ -266,7 +272,7 @@ footer {
     width: 180px;
     height: 10px;
     border-radius: 10px;
-    background-image: linear-gradient(to right, var(--accent-color), hsl(313, 100%, 50%));
+    background-image: linear-gradient(to right, var(--link-color), hsl(313, 100%, 50%));
     display: flex;
     justify-content: end;
     align-items: center;
@@ -276,7 +282,7 @@ footer {
     width: 110px;
     height: 10px;
     border-radius: 10px;
-    background-image: linear-gradient(to right, var(--accent-color), hsl(313, 100%, 50%));
+    background-image: linear-gradient(to right, var(--link-color), hsl(313, 100%, 50%));
     display: flex;
     justify-content: end;
     align-items: center;
@@ -435,7 +441,7 @@ footer {
         display: none;
     }
 
-    .logo {
+    #logo {
     left: 2rem;
     font-size: 1.15em;
   }
@@ -666,6 +672,19 @@ section {
     margin: 0 0.5rem -0.3rem 0;
 }
 
+.colorBtn {
+    background-color: #746363c0; /* ! */
+    color: white;
+    border-radius: 20px;
+    padding: 5px 5px;
+    position: fixed;
+    left: 80vw;
+    bottom: 80vh;
+    cursor: pointer;
+    border: none;
+    font-weight: 700;
+    font-size: 28px;
+}
   
 }
 
