--- a/style.css
+++ b/style.css
@@ -289,7 +289,7 @@ footer {
     width: 180px;
     height: 10px;
     border-radius: 10px;
-    background-image: linear-gradient(to right, var(--link-color), hsl(313, 100%, 50%));
+    background-image: linear-gradient(to right, rgb(224, 224, 0), hsl(313, 100%, 50%));
     display: flex;
     justify-content: end;
     align-items: center;
@@ -299,7 +299,7 @@ footer {
     width: 110px;
     height: 10px;
     border-radius: 10px;
-    background-image: linear-gradient(to right, var(--link-color), hsl(313, 100%, 50%));
+    background-image: linear-gradient(to right, rgb(224, 224, 0), hsl(313, 100%, 50%));
     display: flex;
     justify-content: end;
     align-items: center;
@@ -309,7 +309,7 @@ footer {
     width: 40px;
     height: 10px;
     border-radius: 10px;
-    background-image: linear-gradient(to right, var(--accent-color), hsl(313, 100%, 50%));
+    background-image: linear-gradient(to right, rgb(224, 224, 0), hsl(313, 100%, 50%));
     display: flex;
     justify-content: end;
     align-items: center;
