--- a/style.css
+++ b/style.css
@@ -694,13 +694,14 @@ section {
 }
 
 .colorBtn {
+    height: 50px;
     background-color: #746363c0; /* ! */
     color: white;
     border-radius: 0 20px 20px 0;
     padding: 5px 5px;
     position: fixed;
-    left: 0vw;
-    bottom: 80vh;
+    left: -50vw;
+    top: 10vh;
     cursor: pointer;
     border: none;
     font-weight: 700;
