--- a/style.css
+++ b/style.css
@@ -354,7 +354,6 @@ footer {
     position: relative;
     bottom: 20rem;
     left: 40rem;
-    margin-top: 5vh;
 }
 
 .splitterApp {
@@ -377,13 +376,13 @@ footer {
 .projHeader, .skillHeader {
     width: 100%;
     margin-left: 4.4vw;
-    margin-top: 10vh;
+    margin-top: 10%;
     
 }
 
 .skillHeader {
     position: relative;
-    top: 7vh;
+    top: 50px;
 
 }
 
