--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ section {
     height: 6px;
     background-image: linear-gradient(to right, var(--link-color) , hsl(0, 0%, 100%));
     position: relative;
-    left: 165px;
+    left: 12.5vw;
     top: 35px;
     border-radius: 5px;
 }
@@ -116,7 +116,7 @@ section {
 .greetingSection {
     width: 425px;
     padding: 1rem 1rem 3rem 4rem;
-    margin: 4rem 0 3.2rem 10rem;
+    margin: 4rem 0 3.2rem 12vw;
     background-color: var(--greeting);
     transition: background-color 0.3s ease-in-out;
     border-radius: 10px; 
@@ -126,7 +126,7 @@ section {
 
 .pb {
     max-width: 15rem;
-    margin: -40rem 0 4rem 45rem;
+    margin: -50% 0 4rem 50vw;
     border-radius: 1rem 10rem 1rem 1rem;
 
 }
