--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ section {
 
 .pb {
     max-width: 15rem;
-    margin: -50% 0 4rem 50vw;
+    margin: -50% 0 4rem 45rem;
     border-radius: 1rem 10rem 1rem 1rem;
 
 }
