--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ html, body {
 main {
     width: 100%;
     height: 100%;
-    margin: 15vh 0 0 10vw;
+    margin: 10vw 0 0 10vw;
 }
 
 p {
@@ -69,7 +69,8 @@ p {
 }
 
 #landingContainer {
-    margin: 0 auto;
+    width: 100%;
+    margin: -5vh auto 0 15vw;
 }
 
 .leftSide {
@@ -108,7 +109,6 @@ section {
     height: 6px;
     background-image: linear-gradient(to right, var(--link-color) , hsl(0, 0%, 100%));
     position: relative;
-    left: 12.5vw;
     top: 35px;
     border-radius: 5px;
 }
@@ -116,7 +116,7 @@ section {
 .greetingSection {
     width: 425px;
     padding: 1rem 1rem 3rem 4rem;
-    margin: 4rem 0 3.2rem 12vw;
+    margin: 4rem 0 3.2rem 0;
     background-color: var(--greeting);
     transition: background-color 0.3s ease-in-out;
     border-radius: 10px; 
@@ -126,7 +126,7 @@ section {
 
 .pb {
     max-width: 15rem;
-    margin: -50% 0 4rem 45rem;
+    margin: -50% 0 4rem 35rem;
     border-radius: 1rem 10rem 1rem 1rem;
 
 }
@@ -747,6 +747,10 @@ section {
     border: none;
     font-weight: 700;
     font-size: 25px;
+}
+
+#landingContainer {
+    margin: 0;
 }
   
 }
