--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ p {
 
 #landingContainer {
     width: 100%;
-    margin: -5vh auto 0 15vw;
+    margin: -5vh auto 0 13vw;
 }
 
 .leftSide {
@@ -239,7 +239,6 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 5rem;
 }
 
 .langBox {
@@ -569,7 +568,6 @@ footer {
     width: 80%;
     height: 100%;
     display: block;    
-    margin: 5rem 0 2rem 0;
     border-radius: 10px; 
     box-shadow: 0 0 5px rgba(255, 255, 255, 0.209);
      
@@ -579,6 +577,10 @@ footer {
     height: 100%;
     display: block;    
     margin: 5rem 0 2rem 0;
+}
+
+.langCircle {
+    margin: 0 0 -2rem 0;
 }
 
 .contactSection {
@@ -620,7 +622,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0rem auto 7rem auto; 
+    margin: 0rem auto 10rem auto; 
 
 }
 
@@ -750,7 +752,7 @@ section {
 }
 
 #landingContainer {
-    margin: 0;
+    margin: 6rem 0 0 0;
 }
   
 }
